rchive/menu.css
* {
  margin: 0;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

header {
  width: 100vw;
  height: 53.3vw;
}

header nav {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
        /*  justify-content: space-between; */
  -webkit-box-align: center;
      -ms-flex-align: center;
         align-items: flex-end; 
         
  width: 100%;
  min-height: 55px;
  padding: 1rem 1rem;
  position:fixed;
  top: 0;
  background-color:#fff0ed;
  
}

header .nav-link {
  margin-right: 20px;
  list-style-type: none;
  display: inline;
  
}



#blue-text{color: #5bacc3;}

#hero-container {
 
  z-index: -1;
  width: 100vw;
  height: 53.3vw;
  background-color: gainsboro;
  overflow: hidden;
}

#title-box{  width: 285px; height: 185px; background-position: center; margin-left: 34%; margin-right: 34%; }
#title-box h1{background-color:#464646; color: #fff; text-align:center;
 padding-top: 30%; }


#menu-head-list{

  background-size: cover;
    background-color: #393939;
    text-align: center;

}


#Hot-Drinks{background-color: #FFF0ED; padding: 1rem; }
#Cold-Drinks{background-color: #f7f7f7;padding: 1rem; }
#Pasteries{background-color: #FFF0ED;padding: 1rem; }
#Drink-Menu h1,h3, h2, p,h4{ text-align: center; color: #464646}



#menu-head-list{padding-top: 1.25rem; padding-bottom: 1.25rem;}
h1{ font-family: Helvetica ; font-weight:100; font-size: 60px;}
h3{ font-family: Helvetica ; font-weight:100; font-size: 33px;}
h2{ font-family: Helvetica ; font-weight:100; font-size: 60px; margin-bottom: 0.75rem;}
h4{font-family: Helvetica; font-weight: normal; font-size: 21px; margin-bottom: 0.7rem; margin-top: 1rem}
p{margin-bottom: 0.5rem; font-family: Helvetica;}
footer h2{ font-family: Helvetica ; font-weight:100; font-size: 33px;}

#Drink-Menu .price{color:#5bacc3;; text-align: center; font-style: normal;}
#Drink-Menu p{text-align: centre; font-style: italic; margin-left: 30%; margin-right: 30%;}

/*nav bar*/
nav h1{ font-family: Helvetica ; font-weight:100; font-size: 50px;  color: #393939; float: left;}
nav ul{ font-family: Helvetica ; font-size: 21px;list-style-type: none;}
/*nav li{ list-style-type: none; text-decoration: none;  }*/
a{text-decoration: none; color: #393939}

#title-box{  width: 285px; height: 185px; background-position: top left; }
#title-box h1{background-color:#464646; color: #fff; text-align:center;
padding-bottom: 60px; margin-top: 0px;}

menu-text{ font-family: Helvetica ;  font-size: 18px; color: #f7f7f7; margin:0.5em; }
small-text{font-family: Helvetica ;  font-size: 21px; color: #464646;}
text-text{font-family: Helvetica ;  font-size: 33px; color: #464646;}

